--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-is": "^19.1.1",
     "react-leaflet": "^4.2.1",
     "recharts": "^3.1.2",
